# marketpulse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
models/: forecast_xgb.json  forecast_xgb_metadata.json
scripts/: backfill_historical_quotes.py  compute_event_outcomes.py  embed_pending_articles.py  find_similar_events.py  run_news_poller.py  run_poller.py  score_pending_sentiment.py  train_forecast_model.py  verify_storage_pipeline.py
src/marketpulse/api/: main.py  middleware.py  schemas.py
src/marketpulse/config/: settings.py
src/marketpulse/ingestion/: finnhub_client.py  finnhub_models.py  marketaux_client.py  marketaux_models.py  news_poller.py  quote_poller.py  rate_limiter.py
src/marketpulse/models/: embeddings.py  forecast.py  fusion_score.py  sentiment.py
src/marketpulse/storage/: migrator.py  news_repository.py  outcome_repository.py  pool.py  quote_repository.py
src/marketpulse/storage/migrations/: 001_quotes.sql  002_news_articles.sql  003_article_sentiment.sql  004_article_embeddings.sql  005_event_outcomes.sql
src/marketpulse/utils/: logging.py
tests/: test_api.py  test_embeddings_sanity.py  test_finnhub_client.py  test_finnhub_models.py  test_marketaux_client.py  test_marketaux_models.py  test_news_poller.py  test_news_repository_integration.py  test_outcome_repository_integration.py  test_quote_poller.py  test_rate_limiter.py  test_sentiment_sanity.py  test_settings.py  test_storage_integration.py
